# vericite-ai-research-agent

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
src/agent/: agentic_workflow.py
src/ingestion/: __init__.py  chunker.py  config.py  db.py  embedder.py  main.py  models.py  normalizer.py  pdf_handler.py  pipeline.py  repository.py  retriever.py  s2_client.py  schemas.py
src/prompts/: critic_prompt.py  planner_prompt.py  writer_prompt.py
src/utils/: evaluation_metrics.py  load_critic_llm.py  load_planner_llm.py  load_writer_llm.py  structured_outputs.py
