[project]
name = "ai-research-agent"
version = "1.0.0"
description = "Semantic Scholar -> PostgreSQL/pgvector data ingestion pipeline for hybrid RAG."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
]

# Console entry point -> run with `uv run s2-ingest ...`
[project.scripts]
s2-ingest = "ingestion.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src/ layout: tell the build backend where the package lives.
[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]
